--- a/capstone/notebooks/2_Baseline Model .ipynb
+++ b/capstone/notebooks/2_Baseline Model .ipynb
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "00c0c252",
+   "id": "315583e7",
    "metadata": {},
    "outputs": [
     {
@@ -1598,30 +1598,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "b79bff3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<2576x9000 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 27825 stored elements in Compressed Sparse Row format>"
+       "11141                                                                                                                                              jimmy dean blueberry pancake wrap sausage wrap need worry\n",
+       "10351                                                                                                                    instead control population kill experimental kill child molester abuser endthecycle\n",
+       "8                                                                                                                                                                 chris rock excited get tylenol headache go\n",
+       "839                                      today aampe overhead one colleague ask christmas reply go home put family risk first dose hope see family dose maybe safe precaution thank kingstonhospnhs nhsheroe\n",
+       "2484                                                                                                                                                                       date straight white cis man worry\n",
+       "12876                                                                                                amazing grow know would incline push untested vaccinei hear term idea wasso many example sort thing tho\n",
+       "5372                                                                                       happy get get second dose uga hour drive mass site bad site operate efficiently fine trading minute drive instead\n",
+       "8408                                part worldimmunisationweek learn vaccinehesitancy power science develop approve new unprecedented speed interview michaeljdeml medical sociologist swisstph vaccineswork\n",
+       "3860                                                                                                                                                                  receive first sciencerule covidvaccine\n",
+       "10252                                                                                                  already give year life let coerce manipulate take experimental gene therapy lie psychological warfare\n",
+       "6880                                                                                                                                   decline gene therapy one antivaxx decline opiod make one antipain med\n",
+       "7275                                                                               nothing detestable boast brag getting scream obedient state take experimental dna alter gene therapy virtuestupidity fine\n",
+       "3111                                                                                                                                 ovarian failure due vaccinefertility failuremiscarriage birthdefectsetc\n",
+       "6517                                          call experimental gene therapy mean something specific example word magic use corrall mind something safe familiar also admission stupid consider we stupid we\n",
+       "4215                                                                                                                                           tweet someone ask continue good news update dad book tomorrow\n",
+       "8011                                                                          today get first shoot pfizer take selfie captain marvel merch nationalsuperherodaythank qchottawa ottawahealth jimwatsonottawa\n",
+       "468                 grateful relieved get dose modernatx nih nihclinicalcntr proud part national institute hope beacon light dark timesacute side effect sore arm immense sense relief gratitude hope future\n",
+       "6820                                                                             new startup crispr pioneer look epigenetically cure chronic pain gene therapy approach like could lead new class painkiller\n",
+       "3251                                            reality one pfeizer rna experimental guinea pig we take hypothèse reality without ever test can not play russian roulette people live crime clean air enough\n",
+       "5040                                                                                           cdc datum show death cause mrna jab experimental jab first time mrna jab ever use fake virus human mass scale\n",
+       "8531                                                                            currently book citizen year old bear day early provincially online call centre book available sk sask getvaccinatedsk pm cst\n",
+       "8886                                                                               nprcs painful deadly experiment ten thousand monkey lead human mer tuberculosis malaria aid monkey human use standin work\n",
+       "11942                                                  maybe many black americans realize need gene therapy virus vast majority fine justifiably trust liar like fauci big pharma legal immunity case injury\n",
+       "3570                                                                                                                                         dr sherri tenpenny explain depopulation work month via bitchute\n",
+       "1983                                                                                                                                                       uae minister urge teacher education staff get jab\n",
+       "7672                                                                                                                                                                          alert bioweapon doctor testify\n",
+       "9238                                                                  nurembergcode stop push experimental already kill thousand maim hundred thousand checkout take evil digit health choice novaccineforme\n",
+       "4884                                                                                                                                                                        got dose patiently wait dead arm\n",
+       "1586                                                                              nearly americans say would definitely probably get accord recent survey pew research center gate moderna call depopulation\n",
+       "450      senjonbumstead forceinjecte citizen fasttracke experimental liabilityfree unethical unconstitutional medical mandate belong free society let person choose care body nomandate noforcedcovidvaccine\n",
+       "Name: clean_text, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_tf_test"
+    "X_test.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5f9ddefe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(df['text'], df['is_misinfo'], test_size=.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "31dec792",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11141                                                                                                                                                                                                 If you are those jimmy dean blueberry pancake wrapped sausage wraps, you don’t need to worry about what’s in the vaccine\n",
+       "10351                                                                                                                                                                       Instead of controlling the population by killing people with an experimental vaccine we should just kill child molesters and abusers. #endthecycle\n",
+       "8                                                                                                                                                                                          Chris Rock excited to get the COVID vaccine: ‘Do I know what’s in Tylenol? I just know my headache is gone’ https://t.co/k4HnEcR8Z4\n",
+       "839                                  Today in the A&amp;E, overhead one colleague asking other about Christmas. He replied, no I didn’t go home, don’t want to put family at risk, had my first vaccine dose, hoping to see my family after 2nd dose as it maybe safer with precautions. Thank you @KingstonHospNHS #NHSheroes\n",
+       "2484                                                                                                                                                                                                                                               If you date straight white cis men, don’t worry about what’s in the vaccine\n",
+       "12876                                                                 It's amazing that people who grew up knowing about this would be so inclined to push an untested vaccine..\\nI am only 35 and I had heard the term but had no idea what it was.\\nSo many examples of this sort of thing tho.. \\n\\nhttps://t.co/n7KPwDCC6Q\n",
+       "5372                                                                                                   I'm happy I get to get my second vaccine dose at UGA-- not that the hour drive to the mass vaccination site was so bad (and the site operated very efficiently), but I'm fine trading it for a 5 minute drive instead 😄\n",
+       "8408          As part of #WorldImmunisationWeek, learn more about #VaccineHesitancy and the power of #science in developing and approving new #vaccines at an unprecedented speed in our interview with @michaeljdeml, a medical sociologist at @SwissTPH 👉 https://t.co/hrd4lqbRIs\\n\\n| #VaccinesWork https://t.co/Fy8N2RBBby\n",
+       "3860                                                                                                                                                                                                                                                         Just received my first COVID vaccine! #sciencerules #COVIDVaccine\n",
+       "10252                                                                                                                     You’ve already given them over a year of your life, don’t let them coerce and manipulate you into taken an experimental gene therapy with lies and psychological warfare.\\n\\nhttps://t.co/bgl38Ds2Vn\n",
+       "6880                                                                                                                                                                                                  Declining a \"gene therapy\" vaccine does not make one anti-vaxx, any more than declining opiods makes one anti-pain meds.\n",
+       "7275                                                                                                           Nothing is as detestable as people who boast and brag about getting the vaccine. It screams \"I'm obedient to the state, and am taking experimental DNA Altering gene therapy\". Virtue-stupidity at it's finest.\n",
+       "3111                                                                                                                                                                                                   OVARIAN FAILURE DUE TO #CVD19 #VACCINE\\n\\n#FERTILITY FAILURE\\n#MISCARRIAGES \\nBIRTHDEFECTS\\nETC https://t.co/KtzX1b5zqq\n",
+       "6517                                          Calling experimental gene therapy a vaccine, when \"vaccine\" means something very specific, is an example of word magic used to corrall the mind to something safe and familiar. It is also an admission of how stupid these people consider us... and how stupid most of us are.\n",
+       "4215                                                                                                                                                                                              Tweeting this as someone asked for continuing good news vaccine updates, but my dad's all booked in for his tomorrow!!!! 🌟🌟🌟\n",
+       "8011                                                                                              At 1:23 today I got my first shot of Pfizer. \\n\\nHad to take my selfie in my Captain Marvel merch for #nationalsuperheroday.\\n\\nThank you @QCHOttawa @OttawaHealth\\n @JimWatsonOttawa #vaccinated\\n\\nhttps://t.co/M8zKsO67FM\n",
+       "468      Grateful &amp; relieved to get 1st dose @moderna_tx #COVID19Vaccine\\nThank you @NIH @NIHClinicalCntr. Proud to be part of National Institutes of Hope – a beacon of light in these dark times!\\nAcute Side Effects: a sore arm and an immense sense of relief, gratitude and hope for future! https://t.co/iB5eSUowvB\n",
+       "6820                                                                                                                             A new startup from a CRISPR pioneer looks to (epigenetically) cure chronic pain\\n\\n“A gene therapy approach like this... could lead to a new class of painkillers”\\n\\nhttps://t.co/DVA4462LnY\n",
+       "3251                                  The reality is only one, Pfeizer RNA is an experimental vaccine, the guinea pigs will be us all. you take your hypothèses for realities without ever having tested them. You cannot play Russian roulette with people's lives. its a crime. clean up the air not vaccinate. it's enough.\n",
+       "5040                                                                                                CDC data on Covid-19 - shows 1000s and 1000s of deaths caused by the mRNA jab, which is not a vaccine. It is an experimental jab and first time an mRNA jab has ever been used for a fake virus on humans on a mass scale.\n",
+       "8531                                                                                                 Currently Booking: Citizens 44 years and older (born on this day in 1977 or earlier) provincially (online and call centre booking available) c/o: https://t.co/ujWWhpzO3i #sk #sask #GetVaccinatedSK (04/27 03:05 PM CST)\n",
+       "8886                                                                         The NPRCs’ painful and deadly vaccine experiments on tens of thousands of monkeys haven’t led to any vaccines for humans against MERS, tuberculosis, malaria, AIDS, or COVID-19. Monkeys aren’t humans, and using them as stand-ins doesn’t work.\n",
+       "11942                                   Maybe because many Black Americans realize they don’t need gene therapy for a virus that the vast majority of 65 and under do just fine with and they justifiably don’t trust liars like Fauci and Big Pharma who have 100% legal immunity in cases of injury\\nhttps://t.co/xYdDKLcCQ1\n",
+       "3570                                                                                                                                                                                                   Dr. sherri Tenpenny Explains how the Depopulation Vaccine will Work over 6 Months https://t.co/gtcT2NrmGv via @BitChute\n",
+       "1983                                                                                                                                                                                                 Covid-19 vaccine: UAE minister urges teachers, education staff to get jab https://t.co/wuRTKAEMKu https://t.co/G9vl6AXFu4\n",
+       "7672                                                                                                                                                                                                                                           ALERT! The “Vaccine” is a Bioweapon – 5 Doctors Testify https://t.co/iVbZPivBDx\n",
+       "9238                                                                                                   #NurembergCode Stop pushing an experimental vaccine that has already killed thousands and maimed hundreds of thousands (checkout https://t.co/h6zDCm3l6e) Take your evil digits OFF our health choices! #NoVaccineForMe\n",
+       "4884                                                                                                                                                                                                                                                   Just got my 1st dose for the vaccine. Patiently waiting for a dead arm.\n",
+       "1586                                                                                                                                Nearly 4 in 10 Americans say they would “definitely” or “probably” not get a vaccine, according to a recent survey by the Pew Research Center. Gate’s Moderna has called for depopulation.\n",
+       "450                                          .@senjonbumstead Force-injecting citizens with a fast-tracked, experimental, liability-free vaccine is unethical and unconstitutional. Medical mandates don't belong in a free society. Let each person choose how they care for their bodies. #nomandates #noforcedcovidvaccines\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.head(30)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a71bce",
+   "id": "9e91026a",
    "metadata": {},
    "outputs": [],
    "source": []
